GNOME Bugzilla – Bug 631497
Not handling m3u files with extra whitespace properly
Last modified: 2010-10-06 08:42:12 UTC
Hi, The .m3u files server by: http://www.artistserver.com/charts.cfm Have a comment line starting with 2 tabs, which totem-pl-parser does not grok. I assume this works on other platforms and is not just a website bug. Click on the play button of any song on the page, and open the .m3u with audacious (if not your default action) to see the problem. Thanks, Hans
commit 438b39af2a4be2ac2ed050585de367121d6901da Author: Bastien Nocera <hadess@hadess.net> Date: Wed Oct 6 09:41:28 2010 +0100 Ignore leading spaces before EXTINF comments https://bugzilla.gnome.org/show_bug.cgi?id=631497