Ignore leading spaces before EXTINF comments

https://bugzilla.gnome.org/show_bug.cgi?id=631497