plparse/tests/parser.c
@@ -461,6 +461,16 @@ test_smi_starttime (void)
 }
 
 static void
+test_m3u_leading_tabs (void)
+{
+	char *uri;
+	/* From http://media.artistserver.com/tracks/23985/21898/1/1/1/O_G_Money_-_Girl_Gotta_girlfriend_Feat._O_G_Money_Snoop_Dogg.m3u */
+	uri = get_relative_uri (TEST_SRCDIR "O_G_Money_-_Girl_Gotta_girlfriend_Feat._O_G_Money_Snoop_Dogg.m3u");
+	g_assert_cmpstr (parser_test_get_entry_field (uri, TOTEM_PL_PARSER_FIELD_TITLE), ==, "O G Money - Girl Gotta girlfriend Feat. O G Money, Snoop Dogg");
+	g_free (uri);
+}
+
+static void
 test_parsing_rtsp_text_multi (void)
 {
 	char *uri;
@@ -812,6 +822,7 @@ main (int argc, char *argv[])
 		g_test_add_func ("/parser/parsing/lastfm-attributes", test_lastfm_parsing);
 		g_test_add_func ("/parser/parsing/m3u_separator", test_m3u_separator);
 		g_test_add_func ("/parser/parsing/smi_starttime", test_smi_starttime);
+		g_test_add_func ("/parser/parsing/m3u_leading_tabs", test_m3u_leading_tabs);
 
 		return g_test_run ();
 	}
